# quantum-gravity-hpc

./: исследование.txt
quantum_gravity_hpc/: .gitignore  ADVANCED_FEATURES.md  ANALYSIS_REPORT_v3.2.1.md  BREAKTHROUGH_DISCOVERY.md  BREAKTHROUGH_IDEAS.md  BREAKTHROUGH_REPORT.md  BUGFIX_REPORT_v3.2.1.md  BUILD.md  CHEATSHEET.md  COMPLETE_SUMMARY_v3.2.1.md  CPP_RUST_OPTIMIZATION.md  EXPERIMENT_GUIDE.md  FILE_INDEX.md  FINAL_COMPLETE_HONEST_REPORT.md  FINAL_HONEST_DEFENSE.md  FINAL_HONEST_REPORT.md  FINAL_REPORT.md  FINAL_REPORT_v3.2.1.md  FINAL_SCIENTIFIC_REPORT.md  FINAL_STATUS.md  FINAL_SUMMARY.md  FINAL_VALIDATED_REPORT.md  GITHUB_UPLOAD.md  GRANT_REPORT.md  HONEST_CODE_REVIEW.md  LICENSE  LYAPUNOV_ANALYSIS_REPORT.md  LYAPUNOV_CRITICAL_ISSUE.md  NAVIGATION.md  NEXT_STEPS.md  NOBEL_PLAN.md  OPTIMIZATION_RESULTS.md  PERFORMANCE.md  PROJECT_COMPLETE.md  PROJECT_COMPLETE.txt  PROJECT_COMPLETE_EN.txt  PROJECT_COMPLETE_FINAL.md  PROJECT_COMPLETE_v3.2.1.md  PROJECT_CONTEXT.txt  PROJECT_FINAL_SUMMARY.md  (+122 more)
quantum_gravity_hpc/action_principle/: solver.py
quantum_gravity_hpc/cpp/: bindings.cpp  geodesic_core.cpp  geodesic_core.hpp
quantum_gravity_hpc/holographic_core/: mesh_engine.py  tensor_engine.py
quantum_gravity_hpc/jax_engine/: jax_engine.py
quantum_gravity_hpc/lab_dashboard/: app.py  runner.py
quantum_gravity_hpc/plots/: phi_step_0000.npy  phi_step_0020.npy  phi_step_0040.npy  phi_step_0060.npy  phi_step_0080.npy  phi_step_0120.npy  phi_step_0140.npy  phi_step_0160.npy  (+17 more)
quantum_gravity_hpc/rust/: Cargo.toml
quantum_gravity_hpc/rust/src/: lib.rs
(+3 files in other folders)
