[package]
name = "geodesic_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "geodesic_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
numpy = "0.20"
ndarray = "0.15"
rayon = "1.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
